# EIDC_Copter_CV

./: CMakeLists.txt  main.cpp  serial.cpp  serial.h
